--- a/Exercises/Ex1.html
+++ b/Exercises/Ex1.html
@@ -10,10 +10,11 @@
 
     <h1>Fantastic Mr Fox </h1>
 
-    <h3>by Roald Dahl</h3>
+    <h3> 
+        <em> by Roald Dahl </em>
+    </h3>
 
-    <p></p>
-
+    <p>This is my favorite book and I'm young at heart</p>
 
     
 </body>
