--- a/Exercises/Ex1.html
+++ b/Exercises/Ex1.html
@@ -11,11 +11,14 @@
     <h1>Fantastic Mr Fox </h1>
 
     <h3> 
-        <em> by Roald Dahl </em>
+        by <em> Roald Dahl </em>
     </h3>
 
-    <p>This is my favorite book and I'm young at heart</p>
+    <h4>
 
+        <p>This is my favorite book and I'm young at heart</p>
+
+    </h4>
     
 </body>
 
