--- a/Exercises/Ex1.html
+++ b/Exercises/Ex1.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hey you</title>
+    <title>Ex1</title>
+
+    <link rel="stylesheet" href="Ex1.css">
 </head>
-<body>
 
-    <h1>Fantastic Mr Fox </h1>
+<body class ="my-body">
 
-    <h3> 
-        by <em> Roald Dahl </em>
-    </h3>
+<h1 class="my-title">Fantastic Mr Fox </h1>
 
-    <h4>
+<h3 class="my-subtitle">
+    by <em> Roald Dahl </em>
+</h3>
 
-        <p>This is my favorite book and I'm young at heart</p>
-
-    </h4>
+<p class="my-para">
+<strong class="my-strong">
+    Fantastic Mr. Fox is on the run!
+</strong>
+The three meanest farmers around are out to get him. Fat Boggis, squat Bunce, and skinny Bean have joined forces, and they have Mr. Fox and his family surrounded. What they don’t know is that they’re not dealing with just any fox–Mr. Fox would never surrender. But only the most fantastic plan ever can save him now.
+</p>
     
 </body>
 
