--- a/Exercises/BootStrap/Index.html
+++ b/Exercises/BootStrap/Index.html
@@ -54,23 +54,24 @@
 
         <div class="row">
             <div class="col-md-6">
-                <form action="" method="">
+                <form action="https://script.google.com/macros/s/AKfycbxz0DNJVpgQJBuTSUQSn1Be_a5Z0sggCIJ0T4Cr2klcAVN0MwM/exec" 
+                method="GET">
 
                 <div class="form-group">
                     <label for="userName">Your Name</label>
-                    <input type="text" class ="form-control" 
+                    <input name="NAME" type="text" class ="form-control" 
                     id="userName" placeholder="Input your name">
                 </div>  
 
                 <div class="form-group">
                     <label for="userEmail">Your Email</label>
-                    <input type="text" class ="form-control" 
+                    <input name="EMAIL" type="text" class ="form-control" 
                         id="userName" placeholder="Input your email">
                 </div> 
 
                 <div class="form-group">
                     <label for="mySelect">Select:</label>
-                    <Select id="mySelect" class="form-control">
+                    <Select name="TITLE" id="mySelect" class="form-control">
                         <option value="mr">Mr.</option>
                         <option value="mrs">Mrs.</option>
                     </Select>
